Add initial document-scanner feature and fix configuration/signing issues
Introduce CameraSessionManager to manage AVCaptureSession:
  - Expose session publicly and publish frames via Combine (framePublisher)
  - Configure input/output only within balanced beginConfiguration()/commitConfiguration()
  - Implement start/stop session, torch toggle, and photo capture

Create DocumentProcessor for rectangle detection & perspective correction:
  - Switch to VNDetectRectanglesRequest (supported on iOS 18.4+)
  - Extract VNRectangleObservation corners (topLeft, topRight, bottomRight, bottomLeft)
  - Apply CIPerspectiveCorrection to produce a flattened scan

Build SwiftUI components for scanner UI:
  - DocumentScannerViewModel to glue camera frames → Vision → overlay → capture
  - DocumentOverlayView to draw detected quad over live preview
  - ScannerControlsView for return/capture/torch buttons
  - CameraPreview UIViewRepresentable to display AVCaptureVideoPreviewLayer
  - DocumentScannerView to layer preview, overlay, and controls
  - Update ContentView to launch directly into DocumentScannerView

Update Info.plist:
  - Add NSCameraUsageDescription so iOS can request camera permission

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ Icon?
 xcuserdata/
 *.xcuserstate
 *.xcscmblueprint
+UserInterfaceState.xcuserstate
 
 # Xcode workspace
 *.xcworkspace/xcuserdata/
