--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,62 @@
-# macOS system files
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# macOS resource fork files
-._*
-
-# Spotlight and Finder
-.Spotlight-V100
-.Trashes
-Icon?
-
 # Xcode
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-*.mode2v3
-*.perspectivev3
+#
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+## User settings
 xcuserdata/
-*.xcuserstate
-*.xcscmblueprint
-UserInterfaceState.xcuserstate
 
-# Xcode workspace
-*.xcworkspace/xcuserdata/
-DerivedData/
-.idea/
-*.xcsettings
+## Obj-C/Swift specific
+*.hmap
 
-# Build output
-build/
-Build/
+## App packaging
+*.ipa
+*.dSYM.zip
+*.dSYM
 
-# SwiftPM
-.swiftpm
-Package.resolved
+## Playgrounds
+timeline.xctimeline
+playground.xcworkspace
+
+# Swift Package Manager
+#
+# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
+# Packages/
+# Package.pins
+# Package.resolved
+# *.xcodeproj
+#
+# Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
+# hence it is not needed unless you have added a package configuration file to your project
+# .swiftpm
+
 .build/
 
 # CocoaPods
-Pods/
-Podfile.lock
+#
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
+#
+# Pods/
+#
+# Add this line if you want to avoid checking in source code from the Xcode workspace
+# *.xcworkspace
 
 # Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
+
 Carthage/Build/
 
-# Fastlane
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo.
+# Instead, use fastlane to re-generate the screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/#source-control
+
 fastlane/report.xml
 fastlane/Preview.html
-fastlane/screenshots
+fastlane/screenshots/**/*.png
 fastlane/test_output
-
-# Archive
-*.xcarchive
-
-# App configuration
-*.entitlements
-
-# Logs
-*.log
-
-# Crash reports
-*.crash
-
-# Temporary files
-*.swp
-*.tmp
-
-# Other
-*.orig
-*.rej
