--- a/.github/workflows/ios-tests.yml
+++ b/.github/workflows/ios-tests.yml
@@ -21,12 +21,12 @@ jobs:
         with:
           xcode-version: latest
 
-      - name: Build app
+      - name: Build app (Simulator)
         run: |
-          codebuild \
-          -project Clerk.xcodeproj \
-          -scheme Clerk \
-          -sdk iphonesimulator \
-          -destination 'platform=iOS Simulator,name=iPhone 15' \
-          -configuration Release \
-          clean build
+          xcodebuild \
+            -project Clerk.xcodeproj \
+            -scheme Clerk \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,name=iPhone 15' \
+            -configuration Release \
+            clean build
