--- a/.github/workflows/ios-tests.yml
+++ b/.github/workflows/ios-tests.yml
@@ -27,6 +27,6 @@ jobs:
             -project Clerk.xcodeproj \
             -scheme Clerk \
             -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 14' \
+            -destination 'platform=iOS Simulator,name=Any iOS Simulator Device' \
             -configuration Release \
             clean build
