--- a/.github/workflows/ios-tests.yml
+++ b/.github/workflows/ios-tests.yml
@@ -19,6 +19,14 @@ jobs:
         with:
           xcode-version: 'latest'
 
+      - name: Create Secrets.plist
+        env:
+          SECRETS_CONTENT: ${{ secrets.SECRETS_PLIST_CONTENT }}
+        run: |
+          echo "Creating Secrets.plist at Clerk/Secrets.plist"
+          echo "$SECRETS_CONTENT" > Clerk/Secrets.plist
+          echo "Secrets.plist created successfully."
+
       - name: Run tests on a standard simulator
         run: |
           # Directly specify a standard simulator. This is often more reliable in CI.
