- added two test pdfs (aok invoice and c24 user agreement changes - added prompt to LLM to find todo deadlines and return them in json - added field to show user due dates in summary - added permission request to allow Clerk to access calendar

--- a/Clerk/Info.plist
+++ b/Clerk/Info.plist
@@ -6,5 +6,7 @@
 	<array>
 		<dict/>
 	</array>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Clerk needs access to your calendar to add events for required actions from your documents.</string>
 </dict>
 </plist>
