fix: Correct and declare custom UTI for file dragging
This commit resolves an issue where the custom Uniform Type Identifier (UTI)
for draggable file items was not correctly defined with the app's
bundle identifier and was not declared in the Info.plist.

Changes include:
- Updated the `UTType.fileItemDrag` definition in
  `TransferableItems.swift` to use the correct bundle identifier
  "clerkapp.Clerk.fileitemdrag".
- Added the corresponding `UTExportedTypeDeclarations` entry to
  `Info.plist` to properly register "clerkapp.Clerk.fileitemdrag"
  with the system.

These changes ensure the custom drag type is uniquely identified and
prevents system warnings about undeclared UTIs.

--- a/Clerk/Info.plist
+++ b/Clerk/Info.plist
@@ -8,5 +8,18 @@
 	</array>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Clerk needs access to your calendar to add events for required actions from your documents.</string>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeDescription</key>
+			<string>Clerk File Item Drag</string>
+			<key>UTTypeIdentifier</key>
+			<string>clerkapp.Clerk.fileitemdrag</string>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
