Allowing system to open files without need to copy them

--- a/Clerk/Info.plist
+++ b/Clerk/Info.plist
@@ -6,6 +6,8 @@
 	<array>
 		<dict/>
 	</array>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Clerk needs access to your calendar to add events for required actions from your documents.</string>
 	<key>UTExportedTypeDeclarations</key>
