--- a/Clerk/Info.plist
+++ b/Clerk/Info.plist
@@ -2,26 +2,37 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDocumentTypes</key>
-	<array>
-		<dict/>
-	</array>
-	<key>LSSupportsOpeningDocumentsInPlace</key>
-	<true/>
-	<key>NSCalendarsUsageDescription</key>
-	<string>Clerk needs access to your calendar to add events for required actions from your documents.</string>
-	<key>UTExportedTypeDeclarations</key>
-	<array>
-		<dict>
-			<key>UTTypeDescription</key>
-			<string>Clerk File Item Drag</string>
-			<key>UTTypeIdentifier</key>
-			<string>clerkapp.Clerk.fileitemdrag</string>
-			<key>UTTypeConformsTo</key>
-			<array>
-				<string>public.data</string>
-			</array>
-		</dict>
-	</array>
+    <key>CFBundleDocumentTypes</key>
+    <array>
+        <dict/>
+    </array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLName</key>
+            <string>com.clerkapp.Clerk</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>clerk</string>
+            </array>
+        </dict>
+    </array>
+    <key>LSSupportsOpeningDocumentsInPlace</key>
+    <true/>
+    <key>NSCalendarsUsageDescription</key>
+    <string>Clerk needs access to your calendar to add events for required actions from your documents.</string>
+    <key>UTExportedTypeDeclarations</key>
+    <array>
+        <dict>
+            <key>UTTypeDescription</key>
+            <string>Clerk File Item Drag</string>
+            <key>UTTypeIdentifier</key>
+            <string>clerkapp.Clerk.fileitemdrag</string>
+            <key>UTTypeConformsTo</key>
+            <array>
+                <string>public.data</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
